# xtracter

./: CMakeLists.txt  README.md  debug  dutch.dic  english.dic  french.dic  install.sh  main.cpp  spanish.dic
uforia/: CMakeLists.txt  README.md  clear  colored.h  count.h  debug.h  from.h  has.h  helpmaker.h  helpmenu.h  main.cpp  messages.h  numbers.h  random.h  strings.h  uforia.h  uforia.pro  unique.h
