cmake_minimum_required(VERSION 2.8.11)
set(CMAKE_CXX_STANDARD 11)

project(uforia)

add_library(colored colored.h)
add_library(from from.h)
add_library(has has.h)
add_library(messages messages.h)
add_library(strings strings.h)
add_library(helpmenu helpmenu.h)
add_library(debug debug.h)
add_library(unique unique.h)
add_library(count count.h)
add_library(numbers numbers.h)
add_library(uforia uforia.h)

foreach (target IN ITEMS colored from has messages strings helpmenu debug unique count numbers uforia)
    set_target_properties(${target} PROPERTIES LINKER_LANGUAGE CXX)
endforeach ()
